--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,11 +9,24 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= "Antje Lang" %></title>
     
-    <%= stylesheet_link_tag "normalize", "all" %>
-    <%= javascript_include_tag  "all" %>
+    <link href='http://fonts.googleapis.com/css?family=Old+Standard+TT' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Euphoria+Script' rel='stylesheet' type='text/css'>
+
+    <%= stylesheet_link_tag "normalize" %>
+    <%= stylesheet_link_tag "foundation" %>
+    <%= stylesheet_link_tag "all" %>
+    <%= stylesheet_link_tag "foundation-icons/foundation-icons/foundation-icons.css" %>
+    <%= javascript_include_tag  "vendor/modernizr" %>
+    <%= javascript_include_tag  "vendor/jquery" %>
+    <%= javascript_include_tag  "foundation.min" %>
+    
   </head>
   
   <body class="<%= page_classes %>">
     <%= yield %>
+    
+    <script>
+      $(document).foundation();
+    </script>
   </body>
 </html>
