--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -6,30 +6,28 @@ body {
   font-family: sans-serif; }
 
 h1 {
-  color: rgba(0, 0, 0, .3);
-  font-weight: bold;
-  font-size: 32px;
-  letter-spacing: -1px;
-  text-transform: uppercase;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
-  background: url("../images/middleman.png") no-repeat center 100px;
-  padding: 350px 0 10px;
+  font-size: 40px;
   margin: 0; }
 
 .doc {
   font-size: 14px;
   margin: 0; }
-  .doc:before,
-  .doc:after {
-    opacity: .2;
-    padding: 6px;
-    font-style: normal;
-    position: relative;
-    content: "•"; }
-  .doc a {
-    color: rgba(0, 0, 0, 0.3); }
-    .doc a:hover {
-      color: #666; }
+.doc:before,
+.doc:after {
+  opacity: .2;
+  padding: 6px;
+  font-style: normal;
+  position: relative;
+  content: "•"; }
+.doc a {
+  color: rgba(0, 0, 0, 0.3); }
+.doc a:hover {
+  color: #666; }
+
+.index h1{
+  font-family: 'Euphoria Script', cursive;
+}
+    
 
 .welcome {
   -webkit-animation-name: welcome;
