--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -2,6 +2,8 @@
 
 $background-color: #244920;
 $font-color: #f5f5f5;
+$title-size: 90px;
+$body-copy-size: 20px;
 
 body {
   background: $background-color;
@@ -9,8 +11,10 @@ body {
   font-family: sans-serif; }
 
 h1 {
-  font-size: 50px;
   margin: 0; }
+
+p {
+  font-family: 'Old Standard TT', serif; }
 
 .doc {
   font-size: 14px;
@@ -31,6 +35,12 @@ h1 {
   h1{
     font-family: 'Euphoria Script', cursive;
     color: $font-color;
+    font-size: $title-size;
+  }
+  
+  p{
+    color: $font-color;
+    font-size: $body-copy-size;
   }
 }
     
