--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -4,6 +4,7 @@ $background-color: #244920;
 $font-color: #f5f5f5;
 $title-size: 90px;
 $body-copy-size: 20px;
+$header-size: 18px;
 
 body {
   background: $background-color;
@@ -15,6 +16,24 @@ h1 {
 
 p {
   font-family: 'Old Standard TT', serif; }
+
+ul{
+  font-family: 'Old Standard TT', serif;
+  color: $font-color; 
+  font-size: $header-size;
+  list-style: none;
+  display: inline-block;
+  vertical-align: middle;
+  width: 100%;
+  margin: auto;
+  padding: 50px 0 20px 0;
+  border-bottom: dotted $font-color 1pt;}
+
+li{
+  display: inline;
+  list-style-type: none;
+  padding: 0 20px 0 20px;
+}
 
 .doc {
   font-size: 14px;
@@ -42,6 +61,8 @@ p {
     color: $font-color;
     font-size: $body-copy-size;
   }
+  
+  
 }
     
 
