move antje to header

--- a/source/_header.html.haml
+++ b/source/_header.html.haml
@@ -1,7 +1,13 @@
 .small-12.large-6.large-centered.columns
   %ul
-    %li music 
+    %li 
+      = link_to "music", "/music.html" 
     %li &#124;
-    %li about
+    %li
+      = link_to "about", "/about.html" 
     %li &#124;
-    %li contact
+    %li 
+      = link_to "contact", "/contact.html" 
+      
+%h1 
+  = link_to 'antje lang', '/'
