--- a/source/about.html.haml
+++ b/source/about.html.haml
@@ -1,1 +1,7 @@
 = partial 'header'
+
+.small-6.large-9.large-centered.columns
+  .small-6.large-6.columns{style: 'text-align: justify;'}
+    = image_tag "aj2.jpg", :style => 'margin-left: auto; margin-right: auto;'
+  .small-6.large-6.columns{style: 'float: left; text-align: justify;'}
+    %p Antje Lang likes to sing and play guitar. She's actually quite good at it. You should definitely listen to her music, because it's good music. If you like good music, you'll like the music of Antje Lang. She's got a very good voice, and can also play the guitar. That means she's pretty talented. If you're lucky, she'll play a song for you. She's even on Spotify, which means she's legit. This version uses Euphoria Script for the name and Old Standard TT for the text.
