--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -7,7 +7,8 @@ $body-copy-size: 20px;
 $header-size: 18px;
 
 body {
-  background: $background-color;
+  background-image: url('../images/bg2.png');
+  background-repeat: repeat-y repeat-x;  
   text-align: center;
   font-family: sans-serif; }
 
@@ -65,7 +66,6 @@ a:hover{
   color: #f5f5f5; }
 
 .index {
-  
   p{
     color: $font-color;
     font-size: $body-copy-size;
