--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -2,18 +2,22 @@
 
 $background-color: #244920;
 $font-color: #f5f5f5;
+$body-copy: 'Old Standard TT', serif;
 $title-size: 90px;
 $body-copy-size: 20px;
 $header-size: 18px;
+$header-font: 'Euphoria Script', cursive;
 
 body {
   background-image: url('../images/bg2.png');
   background-repeat: repeat-y repeat-x;  
   text-align: center;
-  font-family: sans-serif; }
+  font-family: $body-copy;
+  color: $font-color; 
+}
 
 h1{
-    font-family: 'Euphoria Script', cursive;
+    font-family: $header-font;
     color: $font-color;
     font-size: $title-size;
   }
@@ -23,12 +27,13 @@ h1 a:hover{
 }
 
 p {
-  font-family: 'Old Standard TT', serif;
+  font-family: $body-copy;
   color: $font-color;
+  text-align: justify;
   font-size: $body-copy-size;}
 
 ul{
-  font-family: 'Old Standard TT', serif;
+  font-family: $body-copy;
   color: $font-color; 
   font-size: $header-size;
   list-style: none;
@@ -70,34 +75,34 @@ a:hover{
     color: $font-color;
     font-size: $body-copy-size;
   }
-  
   img{
-    border-radius: 50%;
-    max-width: 500px;
-    max-height: 500px;
-    margin-bottom: 25px;
+    border-radius: 2%;
+    margin-bottom: 35px;
     box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.75);
   }
-  
-  
 }
 
 .about {
-  
   p{
     color: $font-color;
     font-size: $body-copy-size;
   }
-  
   img{
     border-radius: 50%;
     max-width: 350px;
     max-height: 350px;
     margin-bottom: 25px;
-    box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.75);
   }
-  
-  
+}
+
+.music {
+  .button{
+    background: transparent;
+    font-size: 30px;
+  }
+  .button:hover{
+    border-bottom: dotted $font-color 1pt;
+  }
 }
     
 
