--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,5 +1,8 @@
 = partial "header"
 
-= image_tag("aj1.jpg")
+.small-12.large-6.large-centered.columns
+  = image_tag("aj1.jpg")
+  
+= partial "footer"
 
   
