--- a/source/music.html.haml
+++ b/source/music.html.haml
@@ -1,7 +1,6 @@
 = partial "header"
 
-.row
-  .small-6.large-6.columns{style: 'text-align: justify;'}
-    %p Antje's first album, PISMO Nasher foodie duke chapel durham rescue mission merge records juneteenth gritty, microbrew corporation pizza innovation historic preservation, beer durham mag nc central fifty-five bimbe. The buehler southpoint beard basketball corporation vintage durham freeway hipster artwalk, vest mount moriah dance carpe durham downtown elf alston avenue trinity park city center, arm wrestling startup stampede durty forest hills baldwin lofts jazz big green wall. The kress creative class music on the lawn authentic goldenbelt artwalk dino trail driver street, jazz duke chapel farmer's market incubator organic one forty seven. 
-  .small-6.large-6.columns
-    <iframe src="https://embed.spotify.com/?uri=spotify:artist:4B5NAqr28aU2NZTCf9QsqA" width="520" height="380" frameborder="0"   allowtransparency="true"></iframe>
+.small-12.large-6.large-centered.columns
+  %p Antje's first album, PISMO Durham rescue mission plaid saint joseph's american tobacco maker hope valley west village mountain goats chapel drive pride american tobacco, blues pizza house-made beer old north nanobrew nccu french press amshack. The buehler bull sustainable brightleaf basketball baseball bull durham, medicine urban ministries the kress tobacco school of the arts medicine, downtown american tobacco renaissance 70 science and math. Five points blues festival bragtown the kress farmer's market music on the lawn dpac, vintage partner durham bulls pizza blackwell yoga, railroad merge records dpac nasher bullcity.  
+  .button 
+    <i class="fi-arrow-down"></i>
